Implemented madlib.html

--- a/templates/game.html
+++ b/templates/game.html
@@ -7,11 +7,11 @@
     <form action = "/madlib">
         What person?: 
             <select name="person">
-                <option value="angelina jolie">Angelina Jolie</option>
-                <option value="brad pitt">Brad Pitt</option>
-                <option value="johnny depp">Johnny Depp</option>
-                <option value="marilyn monroe">Marilyn Monroe</option>
-                <option value="jimmy fallon">Jimmy Fallon</option></select>
+                <option value="Angelina Jolie">Angelina Jolie</option>
+                <option value="Brad Pitt">Brad Pitt</option>
+                <option value="Johnny Depp">Johnny Depp</option>
+                <option value="Marilyn Monroe">Marilyn Monroe</option>
+                <option value="Jimmy Fallon">Jimmy Fallon</option></select>
             <br>
 
         What color?: 
