--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -8,9 +8,9 @@
 
     <form action="/game">
         Would you like to play a game?
-    <div align="center"><br>
+    <div><br>
     <input type="radio" name="game" value="yes"> Yes<br>
-    <input type="radio" name="game" value="no" checked> No<br>
+    <input type="radio" name="game" value="no"> No<br>
     <input type ="submit">
 
     </div>
