added feeling checkbox option

--- a/templates/game.html
+++ b/templates/game.html
@@ -13,7 +13,7 @@
                 <option value="Marilyn Monroe">Marilyn Monroe</option>
                 <option value="Jimmy Fallon">Jimmy Fallon</option></select>
             <br>
-
+    
         What color?: 
             <select name="color">
                 <option value="red">red</option>
@@ -40,7 +40,14 @@
                 <option value="loud">loud</option>
                 <option value="quiet">quiet</option></select>
              <br>
+
+         
+        How do you feel?:
+        <input type="checkbox" name="feeling" value="sad">sad<br>
+        <input type="checkbox" name="feeling" value="happy">happy<br> 
+
         <input type="submit">
+
      </form>
 
 
