--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -1,1 +1,1 @@
-There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab. When {{ person }} went to pick it up, it burst into flames in a totally {{ adjective }} way.
+There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab. When {{ person }} went to pick it up, it burst into flames in a totally {{ adjective }} way. He/she felt {{ feeling }}.
